# climate-dashboard

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-CODE  LICENSE-DOCS  README.md  RELEASE_GUIDE.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: api.md
src/climate_dashboard/: __init__.py  app.py  cli.py  core.py  entropy_table_bridge.py
tests/: test_cli.py  test_core.py
