[project]
name = "climate-dashboard"
version = "0.3.1"
description = "Interactive Climate Entropy Dashboard for the GenesisAeon stack – visualizes duality, modulation, UTAC thresholds, mandala resonance and sonification output."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GenesisAeon Team", email = "team@genesisaeon.org" }]
keywords = ["climate", "entropy", "dashboard", "visualization", "plotly", "genesisaeon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "dash>=2.17.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
stack = [
    "sonification>=0.0.10",
    "mandala-visualizer>=0.1.0",
    "utac-core>=0.1.0",
    "sigillin>=0.1.0",
    "fieldtheory>=0.1.0",
    "cosmic-moment>=0.1.0",
    "medium-modulation>=0.1.0",
    "entropy-governance>=0.1.0",
    "entropy-table>=1.0.1",
    "implosive-genesis>=0.4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]
docs = [
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.27",
    "mkdocs-material>=9.6",
]

[project.scripts]
cdash = "climate_dashboard.cli:app"

[project.urls]
Repository = "https://github.com/GenesisAeon/climate-dashboard"
Issues = "https://github.com/GenesisAeon/climate-dashboard/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/climate_dashboard"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=climate_dashboard --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

